Team Completed With Responsiveness

--- a/index.html
+++ b/index.html
@@ -415,7 +415,57 @@
           <button class="btn btn-error text-white bg-[]">Shop All</button>
         </div>
       </section>
-      
+      <section class=" rounded-xl p-28 my-16 bg-no-repeat bg-cover  flex flex-col justify-center items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(./images/team.png);">
+        <div class="text-center">
+          <div class=" space-y-7 mb-11">
+            <h1 class="text-white font-extrabold text-5xl">Meet the team section</h1>
+            <p class="text-[#FFF] font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+          </div>
+          <div class="flex gap-8 lg:min-w-[900px] flex-col justify-around lg:flex-row">
+            <div class="flex flex-col gap-3 items-center justify-center">
+              <img src="./images/member1.png" alt="">
+              <h1 class="font-bold text-2xl text-white">Awlad Hossain</h1>
+              <p class="text-white">Fruits Expart</p>
+              <div class="flex gap-3">
+                <img src="./images/facebook 1.png" alt="">
+                <img src="./images/linkedin 1.png" alt="">
+                <img src="./images/twitter (1) 1.png" alt="">
+              </div>
+            </div>
+            <div class="flex flex-col gap-3 items-center justify-center">
+              <img src="./images/member2.png" alt="">
+              <h1 class="font-bold text-2xl text-white">Safia Chowdhury</h1>
+              <p class="text-white">Fruits Expart</p>
+              <div class="flex gap-3">
+                <img src="./images/facebook 1.png" alt="">
+                <img src="./images/linkedin 1.png" alt="">
+                <img src="./images/twitter (1) 1.png" alt="">
+              </div>
+            </div>
+            <div class="flex flex-col gap-3 items-center justify-center">
+              <img src="./images/member3.png" alt="">
+              <h1 class="font-bold text-2xl text-white">Rokib Hossain</h1>
+              <p class="text-white">Fruits Expart</p>
+              <div class="flex gap-3">
+                <img src="./images/facebook 1.png" alt="">
+                <img src="./images/linkedin 1.png" alt="">
+                <img src="./images/twitter (1) 1.png" alt="">
+              </div>
+            </div>
+            <div class="flex flex-col gap-3 items-center justify-center">
+              <img src="./images/member4.png" alt="">
+              <h1 class="font-bold text-2xl text-white">Chaity</h1>
+              <p class="text-white">Fruits Expart</p>
+              <div class="flex gap-3">
+                <img src="./images/facebook 1.png" alt="">
+                <img src="./images/linkedin 1.png" alt="">
+                <img src="./images/twitter (1) 1.png" alt="">
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </section>
     </main>
 </body>
 </html>
