--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       <section class=" rounded-xl p-14 md:p-28 my-16 bg-no-repeat bg-cover  flex flex-col justify-center items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(./images/team.png);">
         <div class="text-center">
           <div class=" space-y-7 mb-11">
-            <h1 class="text-white font-extrabold text-5xl">Meet the team section</h1>
+            <h1 class="text-white font-extrabold text-4xl lg:text-5xl">Meet the team section</h1>
             <p class="text-[#FFF] font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
           <div class="grid md:grid-cols-2 lg:flex gap-8 lg:min-w-[900px] flex-col justify-around lg:flex-row">
@@ -473,8 +473,8 @@
       <!-- Why Choose Us -->
       <section class="mb-36">
         <div>
-          <div class=" text-center space-y-7 mb-14">
-            <h1 class=" font-extrabold text-5xl">Why Choose Us?</h1>
+          <div class="px-8 text-center space-y-7 mb-14">
+            <h1 class=" font-extrabold text-4xl lg:text-5xl">Why Choose Us?</h1>
             <p class=" font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
           <div class="flex flex-col xl:flex-row justify-center gap-14">
