Footer Flex Warped

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
           <h1 class="text-4xl font-bold">Fruit Burst</h1>
         </div>
         <div>
-          <div class="grid lg:grid-flow-col grid-cols-3 gap-6  lg:gap-14 mb-8 font-semibold">
+          <div class="flex flex-wrap items-center text-center justify-center gap-6  lg:gap-14 mb-8 font-semibold">
             <a class="link link-hover">Home</a> 
             <a class="link link-hover">About us</a> 
             <a class="link link-hover">Shop</a> 
@@ -567,7 +567,7 @@
             <a class="link link-hover">Support</a> 
             <a class="link link-hover">My Account</a>
           </div>
-          <div class="grid lg:grid-flow-col grid-cols-3 place-items-center gap-5 lg:gap-10">
+          <div class="flex gap-5 lg:gap-10">
             <a><img src="./images/link (2).png" alt=""></a> 
             <a><img src="./images/link (3).png" alt=""></a> 
             <a ><img src="./images/link (4).png" alt=""></a>
